# upf

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
.github/workflows/: ci.yml
docs/: PROJECT.md  compare_1.x_with_2.x.md  numeric_section_vec_refactor.md
docs/reference/: esl-upf-page.html  esl-upf-page.md
docs/reference/UPF future (after v2.0.1)/: upf-schema-future-reverse_engineering_qe.xsd  upf-spec-future-reverse_engineering_qe.md
docs/reference/UPF v2.0.1/: original-webpage-for-upf-spec-v2.0.1.html  upf-schema-v2.0.1-reverse_engineering_qe.xsd  upf-spec-v2.0.1-reverse_engineering_qe.md
docs/reference/UPF_v2.0.1/: upf-schema-v2.0.1-reverse_engineering_qe.xsd  upf-spec-v2.0.1-reverse_engineering_qe.md
docs/superpowers/specs/: 2026-04-03-upf-roundtrip-design.md
src/: de.rs  error.rs  lib.rs  model.rs  model_validation.rs  ser.rs  text.rs
src/model/: common.rs  core.rs  data_section.rs  full_wfc.rs  gipaw.rs  header.rs  info.rs  internal.rs  mesh.rs  metagga.rs  mod.rs  nonlocal.rs  numbered.rs  numeric_text.rs  paw.rs  pseudo_wavefunctions.rs  semilocal.rs  spin_orb.rs  upf_data.rs  wavefunction.rs
src/model_validation/: common.rs  full_wfc.rs  gipaw.rs  mesh.rs  nonlocal.rs  paw.rs  pseudo_wavefunctions.rs  semilocal.rs  spin_orb.rs  upf_data.rs
tests/: core_parse.rs  examples_regression.rs  fixture_examples.rs  header_bool_flags.rs  header_enum_fields.rs  header_real_world.rs  invalid_sections.rs  model_layout.rs  nonlocal_parse.rs  paw_gipaw_parse.rs  read_api.rs  roundtrip.rs  write_api.rs
(+112 files in other folders)
