[package]
name = "upf"
version = "0.1.1"
edition = "2024"
description = "Rust library for reading UPF text into typed structs and writing validated UpfData back to UPF"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShapelessCat/upf"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"

env_logger = "0.11.10"
log = "0.4.29"

serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.18.0"
quick-xml = { version = "0.39.2", features = ["serialize", "serde-types"] }

validify = "2.0.0"
